# scitt-cose

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  INTEROP.md  LICENSE  NOTICE  README.md  SECURITY.md  conftest.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  good_first_issue.md
.github/workflows/: ci.yml
docs/: hardening-review.md  hosted-verifier-design.md  launch-checklist.md
interop/ccf/: DRAFT-amaury-note.md  README.md  shared-vector.json
interop/vcp/: README.md  result.json  run_interop.py  vcp-issuer-pub.pem  vcp-statement.cose
scitt-cose-go-verify/: .gitignore  README.md  go.mod  go.sum  hardening_test.go  main.go  vectors_test.go
scitt_cose/: __init__.py  _status.py  cli.py  cose_sign1.py  hosted.py  merkle.py  receipt.py  statement.py  vectors.py
scripts/: differential_fuzz.py  generate_test_vectors.py  smoke_verify.py
test-vectors/: README.md  SHA256SUMS  manifest.json
test-vectors/v1/: .gitignore
test-vectors/v1/fail-bad-statement-sig/: expected.json  issuer-key.pub  issuer-key.test-private  log-key.pub  log-key.test-private  receipt.cose  statement.cose
test-vectors/v1/fail-tampered-path/: expected.json  issuer-key.pub  issuer-key.test-private  log-key.test-private
test-vectors/v1/fail-unsupported-vds/: expected.json  issuer-key.pub  log-key.pub  (+4 more)
tests/: conftest.py  test_ccf_interop.py  test_cli_and_status.py  test_cose_sign1.py  test_cose_wg_vectors.py  test_crosslang_go.py  test_differential_fuzz.py  test_hardening.py  test_hosted_page.py  test_hosted_parity.py  test_iana_codepoints.py  test_merkle.py  test_negative_conformance.py  test_receipt.py  test_rfc9162_vectors.py  test_statement.py  test_thirdparty_cose.py  test_vectors.py
tests/fuzz/: baseline.json
(+16 files in other folders)
